--- a/fly.toml
+++ b/fly.toml
@@ -27,3 +27,7 @@ console_command = "php /var/www/html/artisan tinker"
   auto_start_machines = true
   min_machines_running = 0
   processes = ["app"]
+
+[mounts]
+  source="data"
+  destination="/var/www/html/storage"
